parser.output
   0  $accept : %entry% $end

   1  program : INT DIMENSIONS OF config END opt_statements EOF

   2  config : INT DOT_DOT INT
   3         | fields

   4  fields : field
   5         | fields COMMA field

   6  field : ID OF INT DOT_DOT INT

   7  opt_statements :
   8                 | opt_statements statement

   9  statement : cell ASSIGN exp
  10            | ID ASSIGN exp
  11            | IF condition THEN opt_statements END
  12            | IF condition THEN opt_statements ELSE statement END
  13            | IF condition THEN opt_statements ELSEIF condition THEN opt_statements END
  14            | IF condition THEN opt_statements ELSEIF condition THEN opt_statements ELSE opt_statements END

  15  condition : expression EQ expression
  16            | expression NOTEQ expression
  17            | expression GR expression
  18            | expression SM expression
  19            | expression GREQ expression
  20            | expression SMEQ expression

  21  cell : LBRACKET INT COMMA INT RBRACKET

  22  loop : WHEN condition COMMA expression loop
  23       | OTHERWISE

  24  exp : expression loop
  25      | expression

  26  expression : expression ADD terme
  27             | expression SUB terme
  28             | terme

  29  terme : terme MULT facteur
  30        | terme DIV facteur
  31        | terme MOD facteur
  32        | facteur

  33  facteur : PO expression PF
  34          | ADD facteur
  35          | SUB facteur
  36          | cell
  37          | INT
  38          | ID

  39  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (39)

	INT  shift 3
	.  error

	program  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : INT . DIMENSIONS OF config END opt_statements EOF  (1)

	DIMENSIONS  shift 5
	.  error


state 4
	%entry% : '\001' program .  (39)

	.  reduce 39


state 5
	program : INT DIMENSIONS . OF config END opt_statements EOF  (1)

	OF  shift 6
	.  error


state 6
	program : INT DIMENSIONS OF . config END opt_statements EOF  (1)

	ID  shift 7
	INT  shift 8
	.  error

	config  goto 9
	fields  goto 10
	field  goto 11


state 7
	field : ID . OF INT DOT_DOT INT  (6)

	OF  shift 12
	.  error


state 8
	config : INT . DOT_DOT INT  (2)

	DOT_DOT  shift 13
	.  error


state 9
	program : INT DIMENSIONS OF config . END opt_statements EOF  (1)

	END  shift 14
	.  error


state 10
	config : fields .  (3)
	fields : fields . COMMA field  (5)

	COMMA  shift 15
	END  reduce 3


state 11
	fields : field .  (4)

	.  reduce 4


state 12
	field : ID OF . INT DOT_DOT INT  (6)

	INT  shift 16
	.  error


state 13
	config : INT DOT_DOT . INT  (2)

	INT  shift 17
	.  error


state 14
	program : INT DIMENSIONS OF config END . opt_statements EOF  (1)
	opt_statements : .  (7)

	.  reduce 7

	opt_statements  goto 18


state 15
	fields : fields COMMA . field  (5)

	ID  shift 7
	.  error

	field  goto 19


state 16
	field : ID OF INT . DOT_DOT INT  (6)

	DOT_DOT  shift 20
	.  error


state 17
	config : INT DOT_DOT INT .  (2)

	.  reduce 2


state 18
	program : INT DIMENSIONS OF config END opt_statements . EOF  (1)
	opt_statements : opt_statements . statement  (8)

	EOF  shift 21
	IF  shift 22
	LBRACKET  shift 23
	ID  shift 24
	.  error

	statement  goto 25
	cell  goto 26


state 19
	fields : fields COMMA field .  (5)

	.  reduce 5


state 20
	field : ID OF INT DOT_DOT . INT  (6)

	INT  shift 27
	.  error


state 21
	program : INT DIMENSIONS OF config END opt_statements EOF .  (1)

	.  reduce 1


state 22
	statement : IF . condition THEN opt_statements END  (11)
	statement : IF . condition THEN opt_statements ELSE statement END  (12)
	statement : IF . condition THEN opt_statements ELSEIF condition THEN opt_statements END  (13)
	statement : IF . condition THEN opt_statements ELSEIF condition THEN opt_statements ELSE opt_statements END  (14)

	LBRACKET  shift 23
	ID  shift 28
	INT  shift 29
	ADD  shift 30
	SUB  shift 31
	PO  shift 32
	.  error

	cell  goto 33
	condition  goto 34
	expression  goto 35
	terme  goto 36
	facteur  goto 37


state 23
	cell : LBRACKET . INT COMMA INT RBRACKET  (21)

	INT  shift 38
	.  error


state 24
	statement : ID . ASSIGN exp  (10)

	ASSIGN  shift 39
	.  error


state 25
	opt_statements : opt_statements statement .  (8)

	.  reduce 8


state 26
	statement : cell . ASSIGN exp  (9)

	ASSIGN  shift 40
	.  error


state 27
	field : ID OF INT DOT_DOT INT .  (6)

	.  reduce 6


state 28
	facteur : ID .  (38)

	.  reduce 38


state 29
	facteur : INT .  (37)

	.  reduce 37


state 30
	facteur : ADD . facteur  (34)

	LBRACKET  shift 23
	ID  shift 28
	INT  shift 29
	ADD  shift 30
	SUB  shift 31
	PO  shift 32
	.  error

	cell  goto 33
	facteur  goto 41


state 31
	facteur : SUB . facteur  (35)

	LBRACKET  shift 23
	ID  shift 28
	INT  shift 29
	ADD  shift 30
	SUB  shift 31
	PO  shift 32
	.  error

	cell  goto 33
	facteur  goto 42


state 32
	facteur : PO . expression PF  (33)

	LBRACKET  shift 23
	ID  shift 28
	INT  shift 29
	ADD  shift 30
	SUB  shift 31
	PO  shift 32
	.  error

	cell  goto 33
	expression  goto 43
	terme  goto 36
	facteur  goto 37


state 33
	facteur : cell .  (36)

	.  reduce 36


state 34
	statement : IF condition . THEN opt_statements END  (11)
	statement : IF condition . THEN opt_statements ELSE statement END  (12)
	statement : IF condition . THEN opt_statements ELSEIF condition THEN opt_statements END  (13)
	statement : IF condition . THEN opt_statements ELSEIF condition THEN opt_statements ELSE opt_statements END  (14)

	THEN  shift 44
	.  error


state 35
	condition : expression . EQ expression  (15)
	condition : expression . NOTEQ expression  (16)
	condition : expression . GR expression  (17)
	condition : expression . SM expression  (18)
	condition : expression . GREQ expression  (19)
	condition : expression . SMEQ expression  (20)
	expression : expression . ADD terme  (26)
	expression : expression . SUB terme  (27)

	EQ  shift 45
	NOTEQ  shift 46
	SM  shift 47
	GR  shift 48
	SMEQ  shift 49
	GREQ  shift 50
	ADD  shift 51
	SUB  shift 52
	.  error


state 36
	expression : terme .  (28)
	terme : terme . MULT facteur  (29)
	terme : terme . DIV facteur  (30)
	terme : terme . MOD facteur  (31)

	MULT  shift 53
	DIV  shift 54
	MOD  shift 55
	EOF  reduce 28
	END  reduce 28
	IF  reduce 28
	THEN  reduce 28
	ELSE  reduce 28
	ELSEIF  reduce 28
	WHEN  reduce 28
	OTHERWISE  reduce 28
	COMMA  reduce 28
	LBRACKET  reduce 28
	EQ  reduce 28
	NOTEQ  reduce 28
	SM  reduce 28
	GR  reduce 28
	SMEQ  reduce 28
	GREQ  reduce 28
	ID  reduce 28
	ADD  reduce 28
	SUB  reduce 28
	PF  reduce 28


state 37
	terme : facteur .  (32)

	.  reduce 32


state 38
	cell : LBRACKET INT . COMMA INT RBRACKET  (21)

	COMMA  shift 56
	.  error


state 39
	statement : ID ASSIGN . exp  (10)

	LBRACKET  shift 23
	ID  shift 28
	INT  shift 29
	ADD  shift 30
	SUB  shift 31
	PO  shift 32
	.  error

	cell  goto 33
	exp  goto 57
	expression  goto 58
	terme  goto 36
	facteur  goto 37


state 40
	statement : cell ASSIGN . exp  (9)

	LBRACKET  shift 23
	ID  shift 28
	INT  shift 29
	ADD  shift 30
	SUB  shift 31
	PO  shift 32
	.  error

	cell  goto 33
	exp  goto 59
	expression  goto 58
	terme  goto 36
	facteur  goto 37


state 41
	facteur : ADD facteur .  (34)

	.  reduce 34


state 42
	facteur : SUB facteur .  (35)

	.  reduce 35


state 43
	expression : expression . ADD terme  (26)
	expression : expression . SUB terme  (27)
	facteur : PO expression . PF  (33)

	ADD  shift 51
	SUB  shift 52
	PF  shift 60
	.  error


state 44
	statement : IF condition THEN . opt_statements END  (11)
	statement : IF condition THEN . opt_statements ELSE statement END  (12)
	statement : IF condition THEN . opt_statements ELSEIF condition THEN opt_statements END  (13)
	statement : IF condition THEN . opt_statements ELSEIF condition THEN opt_statements ELSE opt_statements END  (14)
	opt_statements : .  (7)

	.  reduce 7

	opt_statements  goto 61


state 45
	condition : expression EQ . expression  (15)

	LBRACKET  shift 23
	ID  shift 28
	INT  shift 29
	ADD  shift 30
	SUB  shift 31
	PO  shift 32
	.  error

	cell  goto 33
	expression  goto 62
	terme  goto 36
	facteur  goto 37


state 46
	condition : expression NOTEQ . expression  (16)

	LBRACKET  shift 23
	ID  shift 28
	INT  shift 29
	ADD  shift 30
	SUB  shift 31
	PO  shift 32
	.  error

	cell  goto 33
	expression  goto 63
	terme  goto 36
	facteur  goto 37


state 47
	condition : expression SM . expression  (18)

	LBRACKET  shift 23
	ID  shift 28
	INT  shift 29
	ADD  shift 30
	SUB  shift 31
	PO  shift 32
	.  error

	cell  goto 33
	expression  goto 64
	terme  goto 36
	facteur  goto 37


state 48
	condition : expression GR . expression  (17)

	LBRACKET  shift 23
	ID  shift 28
	INT  shift 29
	ADD  shift 30
	SUB  shift 31
	PO  shift 32
	.  error

	cell  goto 33
	expression  goto 65
	terme  goto 36
	facteur  goto 37


state 49
	condition : expression SMEQ . expression  (20)

	LBRACKET  shift 23
	ID  shift 28
	INT  shift 29
	ADD  shift 30
	SUB  shift 31
	PO  shift 32
	.  error

	cell  goto 33
	expression  goto 66
	terme  goto 36
	facteur  goto 37


state 50
	condition : expression GREQ . expression  (19)

	LBRACKET  shift 23
	ID  shift 28
	INT  shift 29
	ADD  shift 30
	SUB  shift 31
	PO  shift 32
	.  error

	cell  goto 33
	expression  goto 67
	terme  goto 36
	facteur  goto 37


state 51
	expression : expression ADD . terme  (26)

	LBRACKET  shift 23
	ID  shift 28
	INT  shift 29
	ADD  shift 30
	SUB  shift 31
	PO  shift 32
	.  error

	cell  goto 33
	terme  goto 68
	facteur  goto 37


state 52
	expression : expression SUB . terme  (27)

	LBRACKET  shift 23
	ID  shift 28
	INT  shift 29
	ADD  shift 30
	SUB  shift 31
	PO  shift 32
	.  error

	cell  goto 33
	terme  goto 69
	facteur  goto 37


state 53
	terme : terme MULT . facteur  (29)

	LBRACKET  shift 23
	ID  shift 28
	INT  shift 29
	ADD  shift 30
	SUB  shift 31
	PO  shift 32
	.  error

	cell  goto 33
	facteur  goto 70


state 54
	terme : terme DIV . facteur  (30)

	LBRACKET  shift 23
	ID  shift 28
	INT  shift 29
	ADD  shift 30
	SUB  shift 31
	PO  shift 32
	.  error

	cell  goto 33
	facteur  goto 71


state 55
	terme : terme MOD . facteur  (31)

	LBRACKET  shift 23
	ID  shift 28
	INT  shift 29
	ADD  shift 30
	SUB  shift 31
	PO  shift 32
	.  error

	cell  goto 33
	facteur  goto 72


state 56
	cell : LBRACKET INT COMMA . INT RBRACKET  (21)

	INT  shift 73
	.  error


state 57
	statement : ID ASSIGN exp .  (10)

	.  reduce 10


state 58
	exp : expression . loop  (24)
	exp : expression .  (25)
	expression : expression . ADD terme  (26)
	expression : expression . SUB terme  (27)

	WHEN  shift 74
	OTHERWISE  shift 75
	ADD  shift 51
	SUB  shift 52
	EOF  reduce 25
	END  reduce 25
	IF  reduce 25
	ELSE  reduce 25
	ELSEIF  reduce 25
	LBRACKET  reduce 25
	ID  reduce 25

	loop  goto 76


state 59
	statement : cell ASSIGN exp .  (9)

	.  reduce 9


state 60
	facteur : PO expression PF .  (33)

	.  reduce 33


state 61
	opt_statements : opt_statements . statement  (8)
	statement : IF condition THEN opt_statements . END  (11)
	statement : IF condition THEN opt_statements . ELSE statement END  (12)
	statement : IF condition THEN opt_statements . ELSEIF condition THEN opt_statements END  (13)
	statement : IF condition THEN opt_statements . ELSEIF condition THEN opt_statements ELSE opt_statements END  (14)

	END  shift 77
	IF  shift 22
	ELSE  shift 78
	ELSEIF  shift 79
	LBRACKET  shift 23
	ID  shift 24
	.  error

	statement  goto 25
	cell  goto 26


state 62
	condition : expression EQ expression .  (15)
	expression : expression . ADD terme  (26)
	expression : expression . SUB terme  (27)

	ADD  shift 51
	SUB  shift 52
	THEN  reduce 15
	COMMA  reduce 15


state 63
	condition : expression NOTEQ expression .  (16)
	expression : expression . ADD terme  (26)
	expression : expression . SUB terme  (27)

	ADD  shift 51
	SUB  shift 52
	THEN  reduce 16
	COMMA  reduce 16


state 64
	condition : expression SM expression .  (18)
	expression : expression . ADD terme  (26)
	expression : expression . SUB terme  (27)

	ADD  shift 51
	SUB  shift 52
	THEN  reduce 18
	COMMA  reduce 18


state 65
	condition : expression GR expression .  (17)
	expression : expression . ADD terme  (26)
	expression : expression . SUB terme  (27)

	ADD  shift 51
	SUB  shift 52
	THEN  reduce 17
	COMMA  reduce 17


state 66
	condition : expression SMEQ expression .  (20)
	expression : expression . ADD terme  (26)
	expression : expression . SUB terme  (27)

	ADD  shift 51
	SUB  shift 52
	THEN  reduce 20
	COMMA  reduce 20


state 67
	condition : expression GREQ expression .  (19)
	expression : expression . ADD terme  (26)
	expression : expression . SUB terme  (27)

	ADD  shift 51
	SUB  shift 52
	THEN  reduce 19
	COMMA  reduce 19


state 68
	expression : expression ADD terme .  (26)
	terme : terme . MULT facteur  (29)
	terme : terme . DIV facteur  (30)
	terme : terme . MOD facteur  (31)

	MULT  shift 53
	DIV  shift 54
	MOD  shift 55
	EOF  reduce 26
	END  reduce 26
	IF  reduce 26
	THEN  reduce 26
	ELSE  reduce 26
	ELSEIF  reduce 26
	WHEN  reduce 26
	OTHERWISE  reduce 26
	COMMA  reduce 26
	LBRACKET  reduce 26
	EQ  reduce 26
	NOTEQ  reduce 26
	SM  reduce 26
	GR  reduce 26
	SMEQ  reduce 26
	GREQ  reduce 26
	ID  reduce 26
	ADD  reduce 26
	SUB  reduce 26
	PF  reduce 26


state 69
	expression : expression SUB terme .  (27)
	terme : terme . MULT facteur  (29)
	terme : terme . DIV facteur  (30)
	terme : terme . MOD facteur  (31)

	MULT  shift 53
	DIV  shift 54
	MOD  shift 55
	EOF  reduce 27
	END  reduce 27
	IF  reduce 27
	THEN  reduce 27
	ELSE  reduce 27
	ELSEIF  reduce 27
	WHEN  reduce 27
	OTHERWISE  reduce 27
	COMMA  reduce 27
	LBRACKET  reduce 27
	EQ  reduce 27
	NOTEQ  reduce 27
	SM  reduce 27
	GR  reduce 27
	SMEQ  reduce 27
	GREQ  reduce 27
	ID  reduce 27
	ADD  reduce 27
	SUB  reduce 27
	PF  reduce 27


state 70
	terme : terme MULT facteur .  (29)

	.  reduce 29


state 71
	terme : terme DIV facteur .  (30)

	.  reduce 30


state 72
	terme : terme MOD facteur .  (31)

	.  reduce 31


state 73
	cell : LBRACKET INT COMMA INT . RBRACKET  (21)

	RBRACKET  shift 80
	.  error


state 74
	loop : WHEN . condition COMMA expression loop  (22)

	LBRACKET  shift 23
	ID  shift 28
	INT  shift 29
	ADD  shift 30
	SUB  shift 31
	PO  shift 32
	.  error

	cell  goto 33
	condition  goto 81
	expression  goto 35
	terme  goto 36
	facteur  goto 37


state 75
	loop : OTHERWISE .  (23)

	.  reduce 23


state 76
	exp : expression loop .  (24)

	.  reduce 24


state 77
	statement : IF condition THEN opt_statements END .  (11)

	.  reduce 11


state 78
	statement : IF condition THEN opt_statements ELSE . statement END  (12)

	IF  shift 22
	LBRACKET  shift 23
	ID  shift 24
	.  error

	statement  goto 82
	cell  goto 26


state 79
	statement : IF condition THEN opt_statements ELSEIF . condition THEN opt_statements END  (13)
	statement : IF condition THEN opt_statements ELSEIF . condition THEN opt_statements ELSE opt_statements END  (14)

	LBRACKET  shift 23
	ID  shift 28
	INT  shift 29
	ADD  shift 30
	SUB  shift 31
	PO  shift 32
	.  error

	cell  goto 33
	condition  goto 83
	expression  goto 35
	terme  goto 36
	facteur  goto 37


state 80
	cell : LBRACKET INT COMMA INT RBRACKET .  (21)

	.  reduce 21


state 81
	loop : WHEN condition . COMMA expression loop  (22)

	COMMA  shift 84
	.  error


state 82
	statement : IF condition THEN opt_statements ELSE statement . END  (12)

	END  shift 85
	.  error


state 83
	statement : IF condition THEN opt_statements ELSEIF condition . THEN opt_statements END  (13)
	statement : IF condition THEN opt_statements ELSEIF condition . THEN opt_statements ELSE opt_statements END  (14)

	THEN  shift 86
	.  error


state 84
	loop : WHEN condition COMMA . expression loop  (22)

	LBRACKET  shift 23
	ID  shift 28
	INT  shift 29
	ADD  shift 30
	SUB  shift 31
	PO  shift 32
	.  error

	cell  goto 33
	expression  goto 87
	terme  goto 36
	facteur  goto 37


state 85
	statement : IF condition THEN opt_statements ELSE statement END .  (12)

	.  reduce 12


state 86
	statement : IF condition THEN opt_statements ELSEIF condition THEN . opt_statements END  (13)
	statement : IF condition THEN opt_statements ELSEIF condition THEN . opt_statements ELSE opt_statements END  (14)
	opt_statements : .  (7)

	.  reduce 7

	opt_statements  goto 88


state 87
	loop : WHEN condition COMMA expression . loop  (22)
	expression : expression . ADD terme  (26)
	expression : expression . SUB terme  (27)

	WHEN  shift 74
	OTHERWISE  shift 75
	ADD  shift 51
	SUB  shift 52
	.  error

	loop  goto 89


state 88
	opt_statements : opt_statements . statement  (8)
	statement : IF condition THEN opt_statements ELSEIF condition THEN opt_statements . END  (13)
	statement : IF condition THEN opt_statements ELSEIF condition THEN opt_statements . ELSE opt_statements END  (14)

	END  shift 90
	IF  shift 22
	ELSE  shift 91
	LBRACKET  shift 23
	ID  shift 24
	.  error

	statement  goto 25
	cell  goto 26


state 89
	loop : WHEN condition COMMA expression loop .  (22)

	.  reduce 22


state 90
	statement : IF condition THEN opt_statements ELSEIF condition THEN opt_statements END .  (13)

	.  reduce 13


state 91
	statement : IF condition THEN opt_statements ELSEIF condition THEN opt_statements ELSE . opt_statements END  (14)
	opt_statements : .  (7)

	.  reduce 7

	opt_statements  goto 92


state 92
	opt_statements : opt_statements . statement  (8)
	statement : IF condition THEN opt_statements ELSEIF condition THEN opt_statements ELSE opt_statements . END  (14)

	END  shift 93
	IF  shift 22
	LBRACKET  shift 23
	ID  shift 24
	.  error

	statement  goto 25
	cell  goto 26


state 93
	statement : IF condition THEN opt_statements ELSEIF condition THEN opt_statements ELSE opt_statements END .  (14)

	.  reduce 14


35 terminals, 15 nonterminals
40 grammar rules, 94 states
